# atum

./: .appveyor.yml  .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  Readme.md  run_build.sh
src/: main.cpp
src/intersection/: Interaction.cpp  Interaction.h  Ray.cpp  Ray.h
src/shapes/: Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/utils/: Math.cpp  Math.h
test/: shape_test.cpp
test/Shapes/: CMakeLists.txt  sphere.cpp  triangle.cpp
